openshift/templates/cakephp-mysql-persistent.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: cakephp-mysql-persistent
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: cakephp-mysql-persistent
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: cakephp-mysql-persistent
  spec:
    host: ""
    to:
      kind: Service
      name: cakephp-mysql-persistent
      weight: 100
  status:
    ingress: null
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: cakephp-mysql-persistent
  spec: {}
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: cakephp-mysql-persistent
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: cakephp-mysql-persistent:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/openshift/cakephp-ex.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: php:5.6
          namespace: openshift
      type: Source
    triggers:
    - imageChange: {}
      type: ImageChange
    - type: ConfigChange
    - github:
        secret: BcOSfd0j7MinE18IekgNdkEuPHQ7KmtfiSyksjrB
      type: GitHub
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: cakephp-mysql-persistent
  spec:
    replicas: 1
    selector:
      name: cakephp-mysql-persistent
    strategy:
      recreateParams:
        pre:
          execNewPod:
            command:
            - ./migrate-database.sh
            containerName: cakephp-mysql-persistent
          failurePolicy: Retry
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: cakephp-mysql-persistent
          name: cakephp-mysql-persistent
        name: cakephp-mysql-persistent
      spec:
        containers:
        - env:
          - name: DATABASE_SERVICE_NAME
            value: mysql
          - name: DATABASE_ENGINE
            value: mysql
          - name: DATABASE_NAME
            value: default
          - name: DATABASE_USER
            value: cakephp
          - name: DATABASE_PASSWORD
            value: aDUICDBk5CfXuhjJ
          - name: CAKEPHP_SECRET_TOKEN
            value: kr8dEr0olAYzEJ0add1mLbdbTFr3lPNbIonbbWVMLrnfBqi0f7
          - name: CAKEPHP_SECURITY_SALT
            value: rcWB7nkJcxssD15lbVOsc4HvoWrpQ8BrFWh0MrK8
          - name: CAKEPHP_SECURITY_CIPHER_SEED
            value: "288611550350784846725077416358"
          - name: OPCACHE_REVALIDATE_FREQ
            value: "2"
          image: ' '
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: cakephp-mysql-persistent
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health.php
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - cakephp-mysql-persistent
        from:
          kind: ImageStreamTag
          name: cakephp-mysql-persistent:latest
      type: ImageChange
    - type: ConfigChange
  status: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: mysql
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
  status:
    phase: Pending
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes the database server
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: mysql
  spec:
    ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      name: mysql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the database
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-mysql-persistent
      template: cakephp-mysql-persistent
    name: mysql
  spec:
    replicas: 1
    selector:
      name: mysql
    strategy:
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: cakephp-mysql-persistent
          name: mysql
        name: mysql
      spec:
        containers:
        - env:
          - name: MYSQL_USER
            value: cakephp
          - name: MYSQL_PASSWORD
            value: aDUICDBk5CfXuhjJ
          - name: MYSQL_DATABASE
            value: default
          image: ' '
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          name: mysql
          ports:
          - containerPort: 3306
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - MYSQL_PWD='aDUICDBk5CfXuhjJ' mysql -h 127.0.0.1 -u cakephp -D default
                -e 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: mysql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.6
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
  status: {}
kind: List
metadata: {}
