openshift/templates/cakephp.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-example
      template: cakephp-example
    name: cakephp-example
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: cakephp-example
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-example
      template: cakephp-example
    name: cakephp-example
  spec:
    host: ""
    to:
      kind: Service
      name: cakephp-example
      weight: 100
  status:
    ingress: null
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-example
      template: cakephp-example
    name: cakephp-example
  spec: {}
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-example
      template: cakephp-example
    name: cakephp-example
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: cakephp-example:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/openshift/cakephp-ex.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: php:5.6
          namespace: openshift
      type: Source
    triggers:
    - imageChange: {}
      type: ImageChange
    - type: ConfigChange
    - github:
        secret: BXqlaLPvaNLnWEoorhfcj6kqUrWsMCP2QF7ftjaC
      type: GitHub
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cakephp-example
      template: cakephp-example
    name: cakephp-example
  spec:
    replicas: 1
    selector:
      name: cakephp-example
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: cakephp-example
          name: cakephp-example
        name: cakephp-example
      spec:
        containers:
        - env:
          - name: DATABASE_SERVICE_NAME
          - name: DATABASE_ENGINE
          - name: DATABASE_NAME
          - name: DATABASE_USER
          - name: DATABASE_PASSWORD
          - name: CAKEPHP_SECRET_TOKEN
            value: t60LYsENaUPKJv99h1bJRkWEXd_mAQuXO2YAV81BITIk4gd5ty
          - name: CAKEPHP_SECURITY_SALT
            value: pnTgajhFgLncdVnivlhfSC3BacVovmOPtc18Hc4W
          - name: CAKEPHP_SECURITY_CIPHER_SEED
            value: "381348842283323814377566332821"
          - name: OPCACHE_REVALIDATE_FREQ
            value: "2"
          image: ' '
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: cakephp-example
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - cakephp-example
        from:
          kind: ImageStreamTag
          name: cakephp-example:latest
      type: ImageChange
    - type: ConfigChange
  status: {}
kind: List
metadata: {}
